--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     groovy "org.codehaus.groovy:groovy-all:${groovyVersion}"
 }
 
+// See http://www.gradle.org/docs/current/userguide/gradle_wrapper.html
+task wrapper(type: Wrapper) {
+  gradleVersion = '1.9'
+}
 
 /*
 jar {
