Decouple Avro version identifier from version identifier of this Gradle plugin

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ uploadArchives {
 
 dependencies {
     compile gradleApi()
-    compile "org.apache.avro:avro-compiler:${version}"
+    compile 'org.apache.avro:avro-compiler:1.7.6'
     groovy "org.codehaus.groovy:groovy-all:${groovyVersion}"
 }
 
