--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <repositories>
     <repository>
       <id>clojars</id>
-      <url>http://clojars.org/repo/</url>
+      <url>https://clojars.org/repo/</url>
     </repository>
   </repositories>
   <distributionManagement>
