--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.daemon = true
-group = org.apache.avro
-version = 1.7.7
+group = org.clojars.miguno
+version = 1.7.7.2
 
 groovyVersion = 1.8.7
